Fix Elm Select scrollbar bug

--- a/packages/component-library/draft/Kaizen/Select/styles.elm.scss
+++ b/packages/component-library/draft/Kaizen/Select/styles.elm.scss
@@ -123,9 +123,8 @@
 .menuList {
   max-height: 215px;
   overflow-y: auto;
-  padding-bottom: 4px;
+  padding-bottom: 6px;
   padding-top: 4px;
-  position: relative;
   box-sizing: border-box;
   position: relative;
 }
